# scripts

./: README.md  check.py  pyproject.toml
lib/: Process.py  ThCheck.py
