[tool.poetry]
name = "scripts"
version = "0.1.0"
description = "Scripts"
authors = ["darkman <darkman@meganet.ru>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
